Visor_modelo_3_d_ar.html

--- a/visor_modelo_3_d_ar.html
+++ b/visor_modelo_3_d_ar.html
@@ -25,7 +25,7 @@
 <body>
   <!-- Sube tu archivo convertido a GLB y reemplaza URL_GLTF o URL_GLB -->
   <model-viewer
-    src="URL_DE_TU_MODELO.glb"
+    src="https://drive.google.com/file/d/12AUYbjaQPy91Gg_0dKWh4RuepbgSggEj/view?usp=drive_link"
     ar
     ar-modes="webxr scene-viewer quick-look"
     camera-controls
